fix minor issue with word spacing on header

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -228,10 +228,6 @@ h1 {
     box-shadow:3px 3px 0 #222;
   }
 
-ul {
- word-spacing: 50px;
-}
-
 .gear {
     width: 20px;
     height: 20px;
